--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@ui-kitten/components": "^5.1.2",
     "react": "18.1.0",
     "react-native": "0.70.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0"
+    "react-native-screens": "^3.18.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
